...
        android:id="@+id/homeNotesFragment"
        tools:layout="@layout/fragment_home_notes"
        android:name="com.mateuslima.blocodenotas.feature_notas.presentation.ui.home_notes.HomeNotesFragment"
        android:label="HomeNotesFragment" >
        <action
            android:id="@+id/action_homeNotesFragment_to_selecaoFotoFragment"
            app:destination="@id/selecaoFotoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_homeNotesFragment_to_addEditNotasFragment"
            app:destination="@id/addEditNotasFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
...
