...
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_searchview"
            android:theme="@style/SearchView"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toStartOf="@+id/image_perfil"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/homenotes_pesquisar" />


...
            app:layout_constraintTop_toBottomOf="@+id/radiogroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"
        android:contentDescription="@string/homenotes_fab_contentdescription"
        android:src="@drawable/ic_add"
...
